# Impact-Bastion-cmake

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  impact_bastion.sln
impact_bastion/: Game.cpp  Game.h  Hitbox.cpp  Hitbox.h  impact_bastion.vcxproj  linux-compile.sh  main.cpp
impact_bastion/gameData/: scores.txt
impact_bastion/resources/: scores.txt
impact_bastion/x64/Debug/: game.obj.enc  impact_bastion.exe.recipe  impact_bastion.ilk  vc143.idb
impact_bastion/x64/Debug/impact_bastion.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  impact_bastion.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
impact_bastion/x64/Release/: impact_bastion.exe.recipe  impact_bastion.iobj  impact_bastion.ipdb
impact_bastion/x64/Release/impact_bastion.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  impact_bastion.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
prezentacja/: Impact_Bastion(1).pptx  Stawarz_Sowa_Tutak_Impact_Bastion.docx
x64/Release/gameData/: scores.txt
